[tool.poetry]
name = "pet-1"
version = "0.1.0"
description = ""
authors = ["ieromi <mishaieroklis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "dev.main:start"